whoami/manifest/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`whoami.dev.localhost`)
      kind: Rule
      services:
        - name: whoami
          port: 80
